--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.0.11
   flutter_screenutil: ^5.9.3
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
