--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   path_provider: ^2.0.11
   flutter_screenutil: ^5.9.3
   flutter_spinkit: ^5.2.1
+  add_to_cart_animation: ^2.0.4
 
 dev_dependencies:
   flutter_test:
